--- a/static/styles/scss/_footer.scss
+++ b/static/styles/scss/_footer.scss
@@ -9,7 +9,19 @@
     color:$dark-grey;
     background-color:$white;
     grid-column-gap: 4%;
- }
+}
+
+#footer-logo{
+  @media (min-width: $screen-mdlg){
+    max-height:100px;
+  }
+  @media (min-width: $screen-lg){
+    max-height:100px;
+  }
+  @media (min-width: $screen-xl){
+    max-height:150px;
+  }
+}
 
 #footer-contact{
   order: +1;
@@ -18,20 +30,20 @@
   }
 }
 
- #footer-wrapper p{
-    font-size:100%;
-    @media (min-width: $screen-md){
-      font-size: 70%;
-    }
-    @media (min-width: $screen-mdlg){
-      font-size: 90%;
-    }
-    @media (min-width: $screen-lg){
-      font-size: 100%;
-    }
- }
+#footer-wrapper p, #footer-wrapper div{
+  font-size:100%;
+  @media (min-width: $screen-md){
+    font-size: 82%;
+  }
+  @media (min-width: $screen-mdlg){
+    font-size: 90%;
+  }
+  @media (min-width: $screen-lg){
+    font-size: 100%;
+  }
+}
 
- .footer-icon{
-   width:2.4em;
-   height:2.4em;
- }
+.footer-icon{
+  width:2.4em;
+  height:2.4em;
+}
