--- a/static/styles/scss/_typography.scss
+++ b/static/styles/scss/_typography.scss
@@ -6,6 +6,9 @@ html{
     font-size: 11px;
 
     @media (min-width:$screen-md){
+        font-size: 12px;
+    }
+    @media (min-width:$screen-mdlg){
         font-size: 16px;
     }
     @media (min-width:$screen-lg){
